--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,3 +34,12 @@ jobs:
     
     - name: Run tests with coverage
       run: make test-coverage
+      env:
+        # Генерируем отчет в формате lcov для SonarQube
+        NODE_V8_COVERAGE: coverage
+    
+    - name: SonarQube Scan
+      uses: SonarSource/sonarqube-scan-action@v4
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
